mymistakes
1. Failed to add comma "," after the string is closed by double quotes

[ashok@mydevel python-scripts]$ python ex3.py 
  File "ex3.py", line 24
    print "Is it less or equal?" 5 <= -2
                                 ^
SyntaxError: invalid syntax

Answer: print "Is it less or equal?", 5 <= -2


2. Cannot have strings with multiple lines

 [ashok@mydevel python-scripts]$ python myex1.py 
  File "myex1.py", line 1
    print "Of the Numbers below which is greater 
                                                ^
SyntaxError: EOL while scanning string literal

Code:

print "Of the Numbers below which is greater
        382, 4972, 18, 59585, 750 "


3.  Using undefined variables

Traceback (most recent call last):
  File "ex4.py", line 14, in <module>
    print "There will be", car_not_driven, "empty cars today"
NameError: name 'car_not_driven' is not defined

4. String when not used with single quotes or double quotes causes the string to be used as variable . 

Traceback (most recent call last):
  File "myex3.py", line 7, in <module>
    print "%s has borrowed %d amount from the bank" % (Ramesh, 4000)
NameError: name 'Ramesh' is not defined

In the above program Ramesh variable is not defined, and if have to use string we should be using like below:

print "%s has borrowed %d amount from the bank", % ('Ramesh', 4000)

5. Did not end the string with doublequotes

[ashok@mydevel python-scripts]$ python myex4.py
  File "myex4.py", line 11
    print "Simple interest is calculated using formula:,
                                                       ^
SyntaxError: EOL while scanning string literal

Syntax should be:

print "Simple interest is calculated using formula:",
print "Simple Interest = Princial (%d) * Number of years (%0.1f) * Rate of interest (%d)" % (principal, no_of_years, rate_of_interest)


6.  I declared a variable containing a string with 2 single quotes

cm = ''Centimeters''

  File "myex6.py", line 3
    cm = ''Centimeters''
                     ^
SyntaxError: invalid syntax

Which  is wrong 

7. When printing a * 45 times, i did not use Multiplier operator and instead used period "." 
[ashok@mydevel python-scripts]$ python myex6.py
  File "myex6.py", line 6
    print "*".45
               ^
SyntaxError: invalid syntax

Answer, it should print "*"*45

8. When using comma "," to print multiple statements in single line, i can't use format identiers in the last print statement:

 First How many '%s' is equal to '%s' ? 
Traceback (most recent call last):
  File "myex6.py", line 10, in <module>
    print " It's %d '%s' is equal %0.2f '%s'" % (cm,me,1,cm,0.01,me)
TypeError: %d format: a number is required, not str

Example: 

print " First How many '%s' is equal to '%s' ? ",
print " It's %d '%s' is equal %0.2f '%s'" % (cm,me,1,cm,0.01,me)


The above is wrong :

Correct:

print " First How many '%s' is equal to '%s' ? " % (cm, me), 
print " It's %d '%s' is equal %0.2f '%s'" % (1,cm,0.01,me)  
 

We have to use format identifiers in the same print statement line eventhough we are using multiple statements.

9. We can't use , (comma) when using format identifiers,

[ashok@mydevel python-scripts]$ python myex6.py
  File "myex6.py", line 9
    print " First How many '%s' is equal to '%s' ? ", % (cm,me)
                                                      ^
SyntaxError: invalid syntax


Correct syntax : 

print " First How many '%s' is equal to '%s' ? " % (cm,me),

10.  Again did mistake of using undefined variable

Traceback (most recent call last):
  File "myex6.py", line 21, in <module>
    print " So is %0.2f %s greater than %d %s " % (val_me_conv, me, val_me, me), val_conv_cm > val_me 
NameError: name 'val_conv_cm' is not defined

11.  When using single quotes instead of double quotes, make sure there is no other single quotes in the string 

[ashok@mydevel python-scripts]$ python myex7.py
  File "myex7.py", line 12
    print ' It's 1 %s is %d %s ' % (km,conv,me)
               ^
SyntaxError: invalid syntax


Example: print ' It's 1 %s is %d %s ' % (km,conv,me)

Correct: print " It's 1 %s is %d %s " % (km,conv,me)


12. In correct syntax in  the format identifier

 we will convert 1784 Meters to KiloMeters
Traceback (most recent call last):
  File "myex7.py", line 20, in <module>
    print ' %d %s is 0.2f %s ' % (to_be_conv,me,in_km,km)
TypeError: not all arguments converted during string formatting


print ' %d %s is 0.2f %s ' % (to_be_conv,me,in_km,km)

Mistake is in 0.2f, it should actually be %0.2f

13, Not enough arguments for format string

1 2 3 4
'One' 'Two' 'Three' 'Four'
True False False True
'%r %r %r %r' '%r %r %r %r' '%r %r %r %r' '%r %r %r %r'
Traceback (most recent call last):
  File "ex8.py", line 9, in <module>
    "I had this thing"
TypeError: not enough arguments for format string

Actual code:

print formatter % (
        "I had this thing"
        "That you could type up right"
        "But it didn't sing" 
        "So i said goodnight"
) 


The error is that i did not add , (comma) after each string 


Correct;

print formatter % (
        "I had this thing", 
        "That you could type up right", 
        "But it didn't sing", 
        "So i said goodnight", 
) 

